--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,13 @@
 
 <body>
 	<header class="page-header">
+	</header>
+	<main class="main-content">
+		{{ content }}
+		<hr />
 		<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/"><img
 				src="https://img.shields.io/badge/License-CC_BY--NC--ND_4.0-lightgrey.svg"
 				alt="License: CC BY-NC-ND 4.0"></a>
-	</header>
-	<main class="main-content">{{ content }}
 		<footer class="site-footer">
 			<p>多摩クマ © 2025 by YAMA SUTO is licensed under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0
 				International</p>
