--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,23 +5,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no" />
+	<title>{{ page.title }}</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
-	<header class="page-header">
-	</header>
-	<main class="main-content">
+	<h1>{{ page.title }}</h1>
+	<section>
 		{{ content }}
-		<hr />
+	</section>
+	<hr />
+	<footer class="site-footer">
 		<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/"><img
 				src="https://img.shields.io/badge/License-CC_BY--NC--ND_4.0-lightgrey.svg"
 				alt="License: CC BY-NC-ND 4.0"></a>
-		<footer class="site-footer">
-			<p>多摩クマ © 2025 by YAMA SUTO is licensed under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0
-				International</p>
-		</footer>
-	</main>
+		<p>多摩クマ © 2025 by YAMA SUTO is licensed under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0
+			International</p>
+	</footer>
 </body>
 
 </html>
