--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,6 +17,7 @@
 	</section>
 	<hr />
 	<footer class="site-footer">
+		<p>{{ site.theme }}</p>
 		<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/"><img
 				src="https://img.shields.io/badge/License-CC_BY--NC--ND_4.0-lightgrey.svg"
 				alt="License: CC BY-NC-ND 4.0"></a>
