--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,9 +1,25 @@
 ---
 ---
 
-@import "{{ site.theme }}";
-
 table{
     width: 80%;
     border-collapse: collapse;
+}
+
+table tr{
+    border-bottom: solid 2px white;
+}
+
+table tr:last-child{
+	border-bottom: none;
+}
+
+table th{
+	position: relative;
+	text-align: left;
+	width: 30%;
+	background-color: #b6b6b6;
+	color: white;
+	text-align: center;
+	padding: 10px 0;
 }
