--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
 		{{ content }}
 	</section>
 	<hr />
-	<footer class="site-footer">
+	<footer>
 		<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/"><img
 				src="https://img.shields.io/badge/License-CC_BY--NC--ND_4.0-lightgrey.svg"
 				alt="License: CC BY-NC-ND 4.0"></a>
