--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,22 +1,21 @@
----
----
-
-table{
-    width: 95%;/*親要素に対して*/
-    border-collapse: collapse;
+--- --- table {
+	width: 95%;
+	/*親要素に対して*/
+	border-collapse: collapse;
 }
 
 table th {
 	border: solid 1px black;
 	/*実線 1px 黒*/
-  }
+	background: lightgray;
+}
 
 table td {
 	border: solid 1px black;
 	/*実線 1px 黒*/
 	text-align: center;
-  }
+}
 
-table tr:nth-child(odd) {
-	background: #e9faf9;
+table tr:nth-child(even) {
+	background: lightgray;
 }
