--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,7 +12,9 @@
 
 <body>
 	<h1>{{ page.title }}</h1>
-	{{ content }}
+	<section>
+		{{ content }}
+	</section>
 	<hr />
 	<footer>
 		<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/"><img
