--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,8 +15,8 @@
 	<section>
 		{{ content }}
 	</section>
+	<a href="https://yamasuto.github.io/TamaKuma.github.io/">HOME</a>
 	<hr />
-	<a href="/">HOME</a>
 	<footer>
 		<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/"><img
 				src="https://img.shields.io/badge/License-CC_BY--NC--ND_4.0-lightgrey.svg"
