--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,6 +1,29 @@
 ---
 ---
 
+body {
+    counter-reset: chapter;
+}
+h1 {
+  counter-reset: sub-chapter;
+}
+h2 {
+  counter-reset: section;
+}
+
+h1::before {
+  counter-increment: chapter;
+  content: counter(chapter) ". ";
+}
+h2::before {
+  counter-increment: sub-chapter;
+  content: counter(chapter) "-" counter(sub-chapter) ". ";
+}
+h3::before {
+  counter-increment: section;
+  content: "(" counter(section) ") ";
+}
+
 table {
 	width: 95%;
 	/*親要素に対して*/
