added the page description

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,6 +12,7 @@
 
 <body>
 	<h1>{{ page.title }}</h1>
+	<p>YAMA SUTOの<a href="https://store.line.me/stickershop/author/1607061/ja">LINEスタンプ</a>を並べるページ</p><br />
 	<section>
 		{{ content }}
 	</section>
