introduced the material icon

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,6 +8,8 @@
 	<title>{{ page.title }}</title>
 	<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 
 <body>
@@ -18,7 +20,7 @@
 	</section>
 	<br/>
 	<br/>
-	<a href="https://yamasuto.github.io/TamaKuma.github.io/">HOME</a>
+	<a href="https://yamasuto.github.io/TamaKuma.github.io/"><span class="material-icons">home</span></a>
 	<hr />
 	<footer>
 		<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/"><img
